color change and validation

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
               <h1 id="head1">Welcome Back!</h1>
               <form>
                     <h3 class="sh6">Username</h3>
-                    <input type="text" placeholder="Enter Username">
+                    <input type="text" placeholder="Enter Username" required>
                     <h3 class="sh6">Password</h3>
-                    <input type="password" placeholder="Enter Password">
+                    <input type="password" placeholder="Enter Password" required>
                     <button id="sub1">Sign In</button><br><br>
                     <div id="nm">Not a member? <span id="redirect">Sign Up</span></div> 
                   </form>
